--- a/ansible/roles/screenly/files/screenly.conf
+++ b/ansible/roles/screenly/files/screenly.conf
@@ -22,10 +22,10 @@ audio_output = hdmi
 shuffle_playlist = False
 
 ; Stream asset duration default value (seconds)
-default_streaming_duration = 300
+default_streaming_duration = 30
 
 ; Asset duration default value (seconds)
-default_duration = 10
+default_duration = 30
 
 ; Debug logging toggle
 debug_logging = False
@@ -38,5 +38,5 @@ enable_offline_mode = False
 
 [auth]
 ; If desired, fill in with appropriate username and password
-user=
-password=
+user= adminiseg
+password= iseg1718
