--- a/ansible/roles/screenly/files/screenly.conf
+++ b/ansible/roles/screenly/files/screenly.conf
@@ -3,7 +3,6 @@
 configdir = .screenly
 database = .screenly/screenly.db
 use_ssl = False
-use_24_hour_clock = True
 
 ; Opt-out from analytics
 analytics_opt_out = False
@@ -23,10 +22,10 @@ audio_output = hdmi
 shuffle_playlist = False
 
 ; Stream asset duration default value (seconds)
-default_streaming_duration = 30
+default_streaming_duration = 300
 
 ; Asset duration default value (seconds)
-default_duration = 30
+default_duration = 10
 
 ; Debug logging toggle
 debug_logging = False
@@ -39,5 +38,5 @@ enable_offline_mode = False
 
 [auth]
 ; If desired, fill in with appropriate username and password
-user= adminiseg
-password= iseg1718
+user=
+password=
